--- a/RST-2.ipynb
+++ b/RST-2.ipynb
@@ -682,6 +682,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### РС критерий на нормальность распределения"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -699,6 +706,37 @@
    ],
    "source": [
     "(remains.max() - remains.min()) / ((remains**2).sum()/len(series)-1)**.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Тест Дарбина Уотсона на автокорреляцию"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7705080573236872"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dw = 0\n",
+    "for t in range(1, len(remains)):\n",
+    "    dw += (remains[t]-remains[t-1])**2\n",
+    "dw /= (remains**2).sum()\n",
+    "dw"
    ]
   }
  ],
