--- a/RST-2.ipynb
+++ b/RST-2.ipynb
@@ -42,6 +42,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9.776754462602838, 9.776754462602838)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Arima(series, order=(1,0,1))\n",
+    "f = a.fit()\n",
+    "f.aic, find_aic(series, f.data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ARIMA : 100%|██████████| 20/20 [03:23<00:00, 10.16s/ fit]\n"
+      "ARIMA : 100%|██████████| 12/12 [03:48<00:00, 19.03s/ fit]\n"
      ]
     }
    ],
@@ -729,7 +751,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ARIMA : 100%|██████████| 1/1 [00:34<00:00, 34.92s/ fit]\n"
+      "ARIMA : 100%|██████████| 1/1 [00:53<00:00, 53.21s/ fit]\n"
      ]
     },
     {
@@ -766,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +798,7 @@
        "        0.51243451, -0.61617799])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +943,7 @@
        " 1197.077681342571)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1040,7 @@
        "  <th>Date:</th>          <td>Tue, 10 Mar 2020</td> <th>  AIC                </th> <td>1373.538</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>16:22:25</td>     <th>  BIC                </th> <td>1419.904</td>\n",
+       "  <th>Time:</th>              <td>17:25:43</td>     <th>  BIC                </th> <td>1419.904</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                <td>0</td>        <th>  HQIC               </th> <td>1392.353</td>\n",
@@ -1141,7 +1163,7 @@
        "Model:                     ARMA(7, 8)   Log Likelihood                -669.769\n",
        "Method:                       css-mle   S.D. of innovations             83.560\n",
        "Date:                Tue, 10 Mar 2020   AIC                           1373.538\n",
-       "Time:                        16:22:25   BIC                           1419.904\n",
+       "Time:                        17:25:43   BIC                           1419.904\n",
        "Sample:                             0   HQIC                          1392.353\n",
        "                                                                              \n",
        "==============================================================================\n",
@@ -1186,7 +1208,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1327,14 +1349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ARIMA : 100%|██████████| 24/24 [03:40<00:00,  9.18s/ fit]\n"
+      "ARIMA : 100%|██████████| 24/24 [04:21<00:00, 10.89s/ fit]\n"
      ]
     }
    ],
@@ -1352,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1512,7 @@
        "0.9191035085242788"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1555,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1556,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1646,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1663,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
