--- a/RST-2.ipynb
+++ b/RST-2.ipynb
@@ -34,33 +34,11 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv('./data/RTS-history-USA.csv')\n",
-    "series = np.array([i for i in df.Open[::25]])\n",
+    "series = Model(np.array([i for i in df.Open[::25]]))\n",
     "series_dates = np.array([i for i in df.index[::25]])\n",
     "\n",
     "df2 = pd.read_csv('./data/RTS-history-USA.csv', parse_dates=True, index_col='Date')\n",
     "df2 = df2[::25]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9.776754462602838, 9.776754462602838)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = Arima(series, order=(1,0,1))\n",
-    "f = a.fit()\n",
-    "f.aic, find_aic(series, f.data)"
    ]
   },
   {
@@ -90,10 +68,10 @@
    ],
    "source": [
     "fig = plt.figure(figsize=(18, 10))\n",
-    "plt.plot(series, label='Оригинал', color='000', linewidth=3)\n",
+    "draw(series, label='Оригинал', color='000', linewidth=3)\n",
     "for a in [.05, .25, .5, .75, .95]:\n",
-    "    result = exponential_smoothing(series, a)\n",
-    "    plt.plot(result, label=str(a))\n",
+    "    result = series.exponential_smoothing(a)\n",
+    "    plt.plot(result.seq, label=str(a))\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -117,9 +95,7 @@
     }
    ],
    "source": [
-    "draw(\n",
-    "    find_acf(exponential_smoothing(series, .5), 1, 25)\n",
-    ");"
+    "draw(series.exponential_smoothing(.5).many_acf(1, 25));"
    ]
   },
   {
@@ -153,7 +129,7 @@
     }
    ],
    "source": [
-    "adfuller(series)"
+    "series.fuller_test()"
    ]
   },
   {
@@ -182,7 +158,7 @@
     }
    ],
    "source": [
-    "trend_line = find_trend_by_kf(series, 4)\n",
+    "trend_line = series.trend(4)\n",
     "fig = plt.figure(figsize=(14, 8))\n",
     "draw(series, label='Оригинал')\n",
     "draw(trend_line, label='Полином')\n",
@@ -214,7 +190,7 @@
     }
    ],
    "source": [
-    "determination_kf = find_determination_kf(series, 4)\n",
+    "determination_kf = series.determination_kf(4)\n",
     "determination_kf"
    ]
   },
@@ -233,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7983860721415448"
+       "0.8002357412044664"
       ]
      },
      "execution_count": 8,
@@ -242,7 +218,7 @@
     }
    ],
    "source": [
-    "adjusted_determination_kf = find_adjusted_determination_kf(series, 4)\n",
+    "adjusted_determination_kf = series.adjusted_determination_kf(4)\n",
     "adjusted_determination_kf"
    ]
   },
@@ -270,7 +246,7 @@
     }
    ],
    "source": [
-    "kf2 = find_acf(exponential_smoothing(series, .5), 2)\n",
+    "kf2 = series.exponential_smoothing(.5).acf(2)#find_acf(exponential_smoothing(series, .5), 2)\n",
     "kf2 / (1-kf2**2/(len(series)-2))**.5"
    ]
   },
@@ -355,10 +331,10 @@
     }
    ],
    "source": [
-    "plt.plot(remains);\n",
+    "draw(remains);\n",
     "plt.show()\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(remains, marker='o', color='#f4b', linewidth=.1);\n",
+    "draw(remains, marker='o', color='#f4b', linewidth=.1);\n",
     "ax.hlines(0, -5, 120);"
    ]
   },
@@ -432,7 +408,8 @@
     }
    ],
    "source": [
-    "rp.bic.bic(series.tolist(), trend_line.tolist(), 5)/len(series)"
+    "series.bic(list(trend_line.seq), 5)\n",
+    "# rp.bic.bic(series.sequence, list(trend_line.seq), 5)"
    ]
   },
   {
@@ -501,7 +478,7 @@
     }
    ],
    "source": [
-    "draw(find_acf(remains, 1, 25), marker='o', linewidth=.2);"
+    "draw(remains.many_acf(1,25), marker='o', linewidth=.2);"
    ]
   },
   {
@@ -709,17 +686,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ARIMA : 100%|██████████| 12/12 [03:48<00:00, 19.03s/ fit]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "m, f = Arima.find_optimal_model_by_order(remains, range(7, 10), 0, (range(5, 9)))"
+    "# 9 0 7"
    ]
   },
   {
@@ -728,12 +697,29 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ARIMA : 100%|██████████| 2/2 [01:01<00:00, 30.68s/ fit]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m, f = Arima.find_optimal_model_by_order(remains, range(9, 10), 0, (range(6, 8)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "(9.146757731897779, (9, 0, 7))"
+       "(9.07596127172079, (9, 0, 7))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,23 +730,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ARIMA : 100%|██████████| 1/1 [00:53<00:00, 53.21s/ fit]\n"
+      "ARIMA : 100%|██████████| 1/1 [00:31<00:00, 31.21s/ fit]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "((7, 0, 8), 9.156409597138602)"
+       "((7, 0, 8), 9.08561313696161)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -788,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +784,7 @@
        "        0.51243451, -0.61617799])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +929,7 @@
        " 1197.077681342571)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1026,7 @@
        "  <th>Date:</th>          <td>Tue, 10 Mar 2020</td> <th>  AIC                </th> <td>1373.538</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>17:25:43</td>     <th>  BIC                </th> <td>1419.904</td>\n",
+       "  <th>Time:</th>              <td>21:02:58</td>     <th>  BIC                </th> <td>1419.904</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                <td>0</td>        <th>  HQIC               </th> <td>1392.353</td>\n",
@@ -1163,7 +1149,7 @@
        "Model:                     ARMA(7, 8)   Log Likelihood                -669.769\n",
        "Method:                       css-mle   S.D. of innovations             83.560\n",
        "Date:                Tue, 10 Mar 2020   AIC                           1373.538\n",
-       "Time:                        17:25:43   BIC                           1419.904\n",
+       "Time:                        21:02:58   BIC                           1419.904\n",
        "Sample:                             0   HQIC                          1392.353\n",
        "                                                                              \n",
        "==============================================================================\n",
@@ -1208,7 +1194,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1250,17 +1236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2 = Arima(series, order=(5, 1, 6))\n",
+    "model2 = series.arima(order=(5, 1, 6))\n",
     "fitted_model2 = model2.fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1349,14 +1335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ARIMA : 100%|██████████| 24/24 [04:21<00:00, 10.89s/ fit]\n"
+      "ARIMA : 100%|██████████| 24/24 [03:12<00:00,  8.04s/ fit]\n"
      ]
     }
    ],
@@ -1374,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1450,16 +1436,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "series1 = series[:26]"
+    "series1 = Model(series[:26])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1498,12 +1484,12 @@
    ],
    "source": [
     "draw(series1);\n",
-    "draw(find_trend_by_kf2(series1, get_polyfit(series1, 3)));"
+    "draw(series1.trend(3));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1512,18 +1498,18 @@
        "0.9191035085242788"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "find_determ_kf2(series1, 3)"
+    "series1.determination_kf(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1540,12 +1526,12 @@
     }
    ],
    "source": [
-    "draw(series1 - find_trend_by_kf2(series1, get_polyfit(series1, 3)));"
+    "draw(series1 - series1.trend(3));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1541,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1573,12 +1559,12 @@
     }
    ],
    "source": [
-    "plot_acf(series1 - find_trend_by_kf2(series1, get_polyfit(series1, 3)))"
+    "plot_acf(series1 - series1.trend(3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1595,36 +1581,30 @@
     }
    ],
    "source": [
-    "plot_pacf(series1 - find_trend_by_kf2(series1, get_polyfit(series1, 3)));"
+    "plot_pacf(series1 - series1.trend(3)));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6 0 4 9.373008389477148\n"
+      "ARIMA : 100%|██████████| 2/2 [00:02<00:00,  1.47s/ fit]\n"
      ]
     }
    ],
    "source": [
-    "rem = series1 - find_trend_by_kf2(series1, get_polyfit(series1, 3))\n",
-    "for p, d, q in itertools.product((6, ), range(1), range(4, 5)):\n",
-    "    model = ARIMA(rem, order=(p, d, q))\n",
-    "    try:\n",
-    "        mfit = model.fit()\n",
-    "    except: print('Nahuy'); continue\n",
-    "    a = find_aic(series1[d:], series1[d:]-mfit.resid)\n",
-    "    print(p, d, q, a)"
+    "rem = series1 - series1.trend(3)\n",
+    "m, f = Arima.find_optimal_model_by_order(rem, 6, 1, (4, 5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1626,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1685,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1720,6 +1700,13 @@
     "plt.show()\n",
     "q_df['p-value'].plot();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
