Проверка на случайный характер остатков

--- a/RTS_test.ipynb
+++ b/RTS_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "from sklearn.metrics import r2_score\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from scipy.optimize import curve_fit\n",
-    "from scipy.stats.stats import kurtosis\n",
+    "from scipy.stats.stats import kurtosis, skew\n",
     "from IPython.core.display import display\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (15,8)\n",
@@ -574,6 +574,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Нулевая средняя величина"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -588,6 +595,13 @@
    ],
    "source": [
     "print('Средняя величина остатков:', arima_by_series_remains.resid.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Остатки подчиняются нормальному распределению "
    ]
   },
   {
@@ -632,23 +646,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.310218392296635"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Эксцесс 1.3102 меньше критического 2.0155\n",
+      "Ассиметрия -0.3115 меньше критического 0.6254\n",
+      "РС критерий: 5.9836\n"
+     ]
     }
    ],
    "source": [
-    "kurtosis(arima_by_series_remains.resid)"
+    "kurt = kurtosis(arima_by_series_remains.resid)\n",
+    "n = arima_by_series_remains.resid.size\n",
+    "kurt_critical = 5*(24*n*(n-2)*(n-3)/(n+1)**2/(n+3)/(n+4))**.5\n",
+    "sk = skew(arima_by_series_remains.resid)\n",
+    "sk_critical = 3*(6*(n-1)/(n+1)/(n+3))**.5\n",
+    "\n",
+    "if kurt < kurt_critical:\n",
+    "    print(f'Эксцесс {kurt:.4f} меньше критического {kurt_critical:.4f}')\n",
+    "else:\n",
+    "    print(f'Эксцесс {kurt:.4f} больше, либо равен критическому {kurt_critical:.4f}')\n",
+    "\n",
+    "if sk < sk_critical:\n",
+    "    print(f'Ассиметрия {sk:.4f} меньше критического {sk_critical:.4f}')\n",
+    "else:\n",
+    "    print(f'Ассиметрия {sk:.4f} больше, либо равна критической {sk_critical:.4f}')\n",
+    "    \n",
+    "rem = arima_by_series_remains.resid\n",
+    "# Полученное значение сравнивается с табличными \n",
+    "# С вероятностью ошибки-0.05 и длиной выборки-100 РС критерий должен быть в диапазон(4.31; 5.9)\n",
+    "rc = (rem.max() - rem.min()) / ((rem**2).sum()/len(rem)-1)**.5\n",
+    "print(f'РС критерий: {rc:.4f}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Случайный характер остатков "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ряд стационарен\n"
+     ]
+    }
+   ],
+   "source": [
+    "fuller_test = adfuller(arima_by_series_remains.resid)\n",
+    "if fuller_test[0] > fuller_test[4]['5%']:\n",
+    "    print('Ряд нестационарен')\n",
+    "else:\n",
+    "    print('Ряд стационарен')\n",
+    "del fuller_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
