--- a/RTS_test.ipynb
+++ b/RTS_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "from scipy.stats.stats import kurtosis, skew\n",
     "from IPython.core.display import display\n",
     "from patsy import dmatrices\n",
+    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (15,8)\n",
     "plt.rcParams[\"axes.labelsize\"] = 20\n",
