Закончено описание RandomForestRegressor

--- a/RTS_machine_learning.ipynb
+++ b/RTS_machine_learning.ipynb
@@ -196,7 +196,7 @@
    "metadata": {},
    "source": [
     "### Принцип работы\n",
-    "    Множество решающих деревьев, для каждого дерева берется случайная выборка размером samplesize, для каждого расщепления в дереве просматривается max_features случайных признаков. Выбирается лучший признак и расщепление по нему, так делаем пока в листьях не останется представитель одного класса/пока не достигнута максимальная глубина дерева и т.д"
+    "Множество решающих деревьев, для каждого дерева берется случайная выборка размером *max_samples*, для каждого разветвления в дереве просматривается *max_features* случайных признаков. Выбирается лучший признак и расщепление по нему, так делаем пока в листьях не останется представитель одного класса/пока не достигнута максимальная глубина дерева"
    ]
   },
   {
@@ -204,36 +204,58 @@
    "metadata": {},
    "source": [
     "### Аргументы\n",
-    "* ***n_estimators*** - по умолчанию = 100, количество деревьев в \"лесу\". Увеличение числа деревьев улучшает качество модели, но приходится уделять больше времени её настройке. Качество модели на тестовой выборке выходит на асимптоту, поэтому после определенного количества деревьев, не имеет смысл увеличивать дальше\n",
+    "* ***n_estimators*** - по умолчанию = 100. Количество деревьев в \"лесу\". Увеличение числа деревьев улучшает качество модели, но приходится уделять больше времени её настройке. Качество модели на тестовой выборке выходит на асимптоту, поэтому после определенного количества деревьев, не имеет смысл увеличивать дальше.\n",
     "\n",
     "\n",
-    "* criterion='mse',\n",
+    "* ***criterion*** - по умолчанию = 'mse'. Критерий разветвления. На выбор есть 2 критерия: mse и mae.\n",
     "\n",
     "\n",
-    "* max_depth=None,\n",
-    "* ***min_samples_split*** - по умолчанию = 2, минимальное количество объектов, при которых выполняется разветвление. Увеличение этого параметра ведет к уменьшению времени построения дерева, и к возможному недообучению. Оптимального значения нет.\n",
+    "* ***max_depth*** - по умолчанию = None, т.е неограничена. Максимальная глубина дерева, чем больше это число, тем выше качество модели на обучающей выборке, тем дольше строится дерево, и, возможно, ведет к переобучению. Верно и обратное утверждение, чем меньше значение, тем быстрее строится дерево, ниже качество модели на обучающей выборке, и ведет к недообучению. Рекомендуется использовать максимальную глубину, за исключением случаев когда объектов очень много. Неглубокие деревья следует строит когда в выборке много выбросов.\n",
     "\n",
     "\n",
-    "* ***min_samples_leaf*** - по умолчанию = 1, минимальное число объектов в листьях. Увеличение этого параметра уменьшает время построения дерева и может привести к недообучению. Для задач регрессии минимальное количество объектов в листе рекомендуется устанавливать = 5\n",
+    "* ***min_samples_split*** - по умолчанию = 2. Минимальное количество объектов, при которых выполняется разветвление. Увеличение этого параметра ведет к уменьшению времени построения дерева, и к возможному недообучению. Оптимального значения нет.\n",
     "\n",
     "\n",
-    "* min_weight_fraction_leaf=0.0,\n",
+    "* ***min_samples_leaf*** - по умолчанию = 1. Минимальное число объектов в листьях. Увеличение этого параметра уменьшает время построения дерева и может привести к недообучению. Для задач регрессии минимальное количество объектов в листе рекомендуется устанавливать = 5.\n",
     "\n",
     "\n",
-    "* ***max_features*** - по умолчанию = 'auto', т.е sqrt(n) для задач классификации или n/3 для задач регрессии, количество признаков для выбора разветвления. Считается одним из самых важных признаков. Для выбора разветвления берется max_features количество случайных признаков и из них выбирается самый лучший. При увеличении max_features, увеличивается время построения леса, а также деревья становятся однообразнее, за счет того, что с большей вероятностью, буду иметь набор признаков для выбора лучшего из них\n",
+    "* ***min_weight_fraction_leaf*** - по умолчанию = 0.0. Минимальная взвешенная часть суммы всех весов (всех входных выборок) необходимая для конечного узла. Выборки имеют одинаковый вес, если *sample_weight* (метод .fit) не передается.\n",
     "\n",
     "\n",
-    "* max_leaf_nodes=None,\n",
-    "* min_impurity_decrease=0.0,\n",
-    "* min_impurity_split=None,\n",
-    "* bootstrap=True,\n",
-    "* oob_score=False,\n",
-    "* n_jobs=None,\n",
-    "* random_state=None,\n",
-    "* verbose=0,\n",
-    "* warm_start=False,\n",
-    "* ccp_alpha=0.0,\n",
-    "* max_samples=None,"
+    "* ***max_features*** - по умолчанию = 'auto', т.е sqrt(n) для задач классификации или n/3 для задач регрессии. Количество признаков для выбора разветвления. Считается одним из самых важных признаков. Для выбора разветвления берется *max_features* количество случайных признаков и из них выбирается самый лучший. При увеличении этого параметра увеличивается время построения леса, а также деревья становятся однообразнее, за счет того, что с большей вероятностью, буду иметь набор признаков для выбора лучшего из них.\n",
+    "\n",
+    "\n",
+    "* ***max_leaf_nodes*** - по умолчанию = None(неограничено). Максимальное количество листьев в дереве. Увеличение этого числа способствует увеличению времени построения модели, а уменьшение может привести к недообучению.\n",
+    "\n",
+    "\n",
+    "* ***min_impurity_decrease*** - по умолчанию = 0.0. Минимальная разница между значением, определенным по *criterion* текущего узла, и суммы двух последующих. Если разница больше, то узел считается концевым (т.е листом).\n",
+    "\n",
+    "\n",
+    "* ***min_impurity_split*** - по умолчанию None(1e-7). Минимальное значение текущего узла, определенное по *criterion*. Если значение меньше, то узел становится листом. Этот аргумент является устаревшим, рекомендуется использовать *min_impurity_decrease*.\n",
+    "\n",
+    "\n",
+    "* ***bootstrap*** - по умолчанию = True. Если False, то для построения каждого дерева используется полный датасет.\n",
+    "\n",
+    "\n",
+    "* ***oob_score*** - по умолчанию = False. Следует ли использовать готовые выборки для оценки R<sup>2</sup> на неизвестных данных.\n",
+    "\n",
+    "\n",
+    "* ***n_jobs*** - по умолчанию = None(1). Количество процессоров задействованных в \"строительстве\" дерева. При указании -1 будут задействованы все процессоры.\n",
+    "\n",
+    "\n",
+    "* ***random_state*** - по умолчанию = None. Передача числа позволяет в дальнейшем воспроизводить тест.\n",
+    "\n",
+    "\n",
+    "* ***verbose*** - по умолчанию = 0. \"Многословность\" исходящей после обучения информации.\n",
+    "\n",
+    "\n",
+    "* ***warm_start*** - по умолчанию = False. Если задано значение True, повторно используется решение предыдущего вызова, для обучения и добавления дополнительных оценок в ансамбль, в противном случае просто обучется полностью новый лес.\n",
+    "\n",
+    "\n",
+    "* ***ccp_alpha*** - по умолчанию = 0.0. Параметр сложности, используемый для сокращения минимальной стоимости и сложности. Будет выбрано поддерево с наибольшей сложностью затрат, которое меньше, чем *ccp_alpha*. По умолчанию обрезка не выполняется.\n",
+    "\n",
+    "\n",
+    "* ***max_samples*** - по умолчанию = None. Количество записей для обучения дерева(актуально только когда *bootstrap* = True). Если None, то обучается на всей выборке, если целое число, то на *max_samples* записях, если вещественное, то на max_samples * N записях, где N - количество записей."
    ]
   },
   {
@@ -284,7 +306,18 @@
     "#                 rounded = True, proportion = False, \n",
     "#                 precision = 2, filled = True)\n",
     "# Преобразование dot в png\n",
-    "# dot -Tpng tree.dot -o tree.png -Gdpi=600"
+    "# dot -Tpng tree.dot -o tree.png -Gdpi=600\n",
+    "\n",
+    "\n",
+    "#  # Limit depth of tree to 3 levels\n",
+    "# rf_small = RandomForestRegressor(n_estimators=10, max_depth = 3)\n",
+    "# rf_small.fit(train_features, train_labels)\n",
+    "# # Extract the small tree\n",
+    "# tree_small = rf_small.estimators_[5]\n",
+    "# # Save the tree as a png image\n",
+    "# export_graphviz(tree_small, out_file = 'small_tree.dot', feature_names = feature_list, rounded = True, precision = 1)\n",
+    "# (graph, ) = pydot.graph_from_dot_file('small_tree.dot')\n",
+    "# graph.write_png('small_tree.png');"
    ]
   },
   {
