--- a/RTS.ipynb
+++ b/RTS.ipynb
@@ -3075,6 +3075,7 @@
     "plt.plot(predicted, label='Прогноз на 5 периодов', marker='s')\n",
     "plt.plot(pd.Series(map(lambda x: x[0], arima_by_series.forecast(5)[2]), index=predicted.index))\n",
     "plt.plot(pd.Series(map(lambda x: x[1], arima_by_series.forecast(5)[2]), index=predicted.index))\n",
+    "plt.hline()\n",
     "plt.fill_between(\n",
     "    predicted.index, \n",
     "    pd.Series(map(lambda x: x[0], arima_by_series.forecast(5)[2]), index=predicted.index),\n",
